se realiza la reserva

--- a/templates/addProperty.html
+++ b/templates/addProperty.html
@@ -49,12 +49,19 @@
                             <input type="number" class="form-control" id="priceDay" name="priceDay" placeholder="Valor por noche">
                         </div> <br>
                         <div class="form-group">
-                            <label for="Description" class="sr-only" width="30">Ingrese la descripción de la propiedad</label>
-                            <textarea name="Description" id="Description" type="text" class="form-control" cols="30" rows="10"></textarea>
+                            <label for="Description" class="sr-only" >Ingrese la descripción de la propiedad</label>
+                            <textarea name="Description" id="Description" type="text" class="form-control" cols="30" rows="3"></textarea>
                         </div>
+                        <!-- <div class="form-group">
+                            <select class="form-select" aria-label="Default select example" id="state" name="state">
+                                <option value="">Seleccione disponibilidad de la propiedad</option>
+                                <option value="0">Disponible</option>
+                                <option value="1">No Disponible</option>
+                            </select>
+                        </div> -->
                     </div>
                     <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
-                 </div>
+                </div>
             </form>
         </div>
         <!-- end:Main Form -->
