--- a/templates/editUser.html
+++ b/templates/editUser.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="form-group">
                             <label for="lastname" class="sr-only"></label>
-                            <input type="text" class="form-control" value="{{usered.lastname}}" id="lastname" name="lastname" placeholder="Apellidos">
+                            <input type="text" class="form-control" value="{{usered.lastName}}" id="lastName" name="lastName" placeholder="Apellidos">
                         </div>
                         <div class="form-group">
                             <label for="email" class="sr-only"></label>
