--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -16,8 +16,8 @@
                             <input type="text" class="form-control" id="name" name="name" placeholder="Nombres">
                         </div>
                         <div class="form-group">
-                            <label for="lastname" class="sr-only"></label>
-                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Apellidos">
+                            <label for="lastName" class="sr-only"></label>
+                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Apellidos">
                         </div>
                         <div class="form-group">
                             <label for="email" class="sr-only"></label>
