--- a/static/css/style.css
+++ b/static/css/style.css
@@ -552,9 +552,9 @@ a:hover {
   }
   
   #especificCard {
-    background-color: white;
+    ;
     width: 1000px ;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 3;
     border-radius: 10px;
   }
