--- a/templates/especificProperty.html
+++ b/templates/especificProperty.html
@@ -2,26 +2,56 @@
 {% block body %}
 
 <section>
-  <div id="especificCard" class="card mb-3" style="max-width: 1040px;">
+  <div id="especificCard" class="card mb-3" style="max-width: 1040px; background-color: white">
     
-    <div class="row ">
+    <div class="row " >
     {% for property in propertyp %}
-      <div class="col-md-4">
-        <img src="{{url_for('static', filename='images/'+property.imageP )}}" width="350" height="200" style="border-radius: 3%;" class="col md-3">
-      {% for imageProperty in property['listimage'] %}   
-        <img src="{{url_for('static', filename='images/'+imageProperty )}}" width="350" height="200" style="border-radius: 3%;">
-      {% endfor %}  
-    </div>
-      <div class="col-md-9"> 
+      <div class="col-md-" style="text-align:center;" margin-bottom="3">
+        <img src="{{url_for('static', filename='images/'+property.imageP )}}" width="320" height="180" style="border-radius: 3%; padding: 3px;" class=""  >
+        {% for imageProperty in property['listimage'] %}  
+          <div class="fluid" style="float:right">
+            <img src="{{url_for('static', filename='images/'+imageProperty )}}" width="320" height="180" style="border-radius: 3%; padding: 3px;"  class="" >
+          </div>   
+        {% endfor %}
+      </div>
+      <div class="col-md-12" style="text-align:center;"> 
           <p class="card-text">{{property.Description}}</p>
           <p class="card-text">Ubicada en {{property.cityP}} {{property.countryP}} en la {{property.adressP}} </p>
           <p class="card-text">Cuenta con {{property.roomNumber}} habitaciones y tiene un valor de ${{property.priceDay}} la noche</p>
           <a href="{{property.ubication}}" target="_blank"><strong class="text" style="color:blue";>Ubicación google maps</strong></a>
       </div>
     </div>
+    <a href="{{ url_for('ReservePropertyByState',id=property._id) }}" type="submit" class="btn btn-primary">Reservar</a>
     {% endfor %}
     </div>
   </div>
 </section>
+<!-- <section  class="" id="formreserva">
+  <div class=""> 
+    <form class="form " action="/action_page"> 
+      <div class="row">
+        <div class="form-group col-md-3">
+          <select  class="form-control" aria-label="Default select example" id="roll" name="roll">
+            <option value="">Cual es tu destino?</option>
+            <option value="anfitrion">Cali</option>
+            <option value="invitado">Medellin</option>
+            <option value="invitado">Cartagena</option>
+            <option value="invitado">Santa Marta</option>
+          </select>
+        </div>
+        <div class="form-group col-md-3">
+          <input class="form-control" type="date" id="birthdaytime" name="birthdaytime">
+        </div>
+        <div class="form-group col-md-3">
+          <input class="form-control" type="date" id="birthdaytime" name="birthdaytime">
+        </div>
+        <a href="" class="btn btn-primary col-md-1">Buscar</a>
+      </div>
+    </form>
+  </div>
+
+
+</section> -->
+
 
 {% endblock %}
